--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,8 @@ dependencies {
     runtimeOnly  "io.jsonwebtoken:jjwt-impl:0.12.5"
     runtimeOnly  "io.jsonwebtoken:jjwt-jackson:0.12.5" // JSON 직렬화
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
-    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
-    testImplementation 'org.springframework.boot:spring-boot-starter-web-test'
-    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 
     // 테스트 의존성
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
